stylesCart.css
* {
    margin: 0px;
    padding: 0px;
    font-family: "IBM Plex Serif", serif;
    color: #EDF1D6;
  }
  
  header {
    background-color: #3d413b;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    color: #EDF1D6;
  }
  
  #logo {
    font-size: 3rem;
  }

  main {
    background-color: #609966;
    height: 100vh;
  }

  #TheCartGreyBox {
    background-color: #3d413b7e;
    height: auto;
    width: 50%;
    margin: auto;
    position: relative;
    top: 15%;
    border-radius: 10px;
  }

  #CartSection {
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid #000;
    padding: 20px 20px 5px 20px;
  }


  #CartItemsList {
    display: flex;
    justify-content: space-between;
    padding: 20px 20px 5px 20px;
  }

/* #cart {
  display: flex;
  
} */

#cartSubmit {
  margin: auto;
  align-self: flex-end;
  margin: 20px;
  background-color: #EDF1D6;
  color: #3d413b;
  padding: 10px;
  border-radius: 5px;
  border: none;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.288);
  cursor: pointer;
  font-size: 1rem;
}

/* cart styles */
.newDiv{
  height: 50px;
  width: 50px;
  border: 1px solid white;
}

.btnContainer {
  text-align: right;
}

